awards content done (need css fix), Slider bg, z-index done, footer position done

--- a/src/App.css
+++ b/src/App.css
@@ -47,14 +47,18 @@
 .slider {
   width: 100%;
   height: 700px;
+  margin-top: 80px;
   object-fit: cover;
   color: white;
+  background-image: url("./resources/slider-1.jpg");
+  background-position: center center;
+  background-attachment: fixed;
 }
 .slider-container{
   /* display: none; */
   position: relative;
   width: 100%;
-  height: 650px;
+  height: 600px;
   transform: translate(0, -80px);
   z-index: 2;
 }
@@ -318,30 +322,32 @@
 
 
 /* AWARDS */
-.awards-container {
+.awards {
   background-color: white;
   position: relative;
   justify-content: center;
   text-align: center;
 }
-.awards-emblem{
+.awards-container{
   position: relative;
   display: flex;
-
 }
 .awards-emblem1{
+  width: 20%;
   position: absolute;
   top: -6rem;
   left: -4rem;
   animation: AwardEmblemRotation 8s infinite linear;
 } 
 .awards-emblem2{
+  width: 20%;
   position: relative;
-  top: -21rem;
-  left: -20rem;
+  top: -3rem;
+  left: 0rem;
   animation: AwardEmblemRotation 8s infinite linear;
 }
 .awards-emblem3 {
+  width: 10%;
   position: absolute;
   right: 10rem;
   animation: AwardEmblemRotation 8s infinite linear;
@@ -354,11 +360,58 @@
     transform: rotate(360deg);
   }
 }
+.awards-grid-container {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2fr, 1fr);
+  top: -10rem;
+  gap: 3rem;
+  overflow: hidden;
+  top: -340px;
+}
 .flextime {
   position: relative;
-  top: -3rem;
-  left: -17rem;
+  left: 5rem;
   z-index: 2;
+  height: auto;
+  width: 70%;
+}
+.flextime-text {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  top: 50%;
+}
+.flextime-text p {
+  inline-size: 400px;
+  overflow-wrap: break-word;
+}
+.awards-grid-container h1, h3{
+  background: -webkit-linear-gradient(#1868b0, #283b8f);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.awards-bottom {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.awards-bottom img {
+  margin-right: 30px;
+}
+.awards-info {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+.awards-bottom a {
+  text-decoration: none;
+  color: black;
+}
+.awards-bottom-left {
+  left: 25%;
 }
 
 
@@ -367,7 +420,8 @@
   margin-top: 30px;
   margin-bottom: 30px;
   position: relative;
-  display: inline-block;
+  justify-content: center;
+  text-align: center;
 }
 
 .footer-left {
@@ -381,7 +435,9 @@
 .footer-bottom {
   position: relative;
   display: flex;
-  left: 20px;
+  justify-content: center;
+  text-align: center;
+  left: -22rem;
 }
 
 .footer-bottom-element {
